--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
         <title>Skate Shop</title>
     </head>
     <body>
-        Hello, World!
+        <header>
+            <h1>Skate Shop</h1>
+            <nav>
+                <ul>
+                    <li>Home</li>
+                    <li>Decks</li>
+                    <li>Wheels</li>
+                    <li>Hardware</li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <section>
+                <h2>Hello, World!</h2>
+            </section>
+        </main>
     </body>
 </html>
