--- a/index.html
+++ b/index.html
@@ -3,22 +3,29 @@
     <head>
         <meta charset="UTF-8">
         <title>Skate Shop</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <header>
             <h1>Skate Shop</h1>
             <nav>
-                <ul>
-                    <li>Home</li>
-                    <li>Decks</li>
-                    <li>Wheels</li>
-                    <li>Hardware</li>
-                </ul>
+                <a href="#decks">Decks</a>
+                <a href="#wheels">Wheels</a>
+                <a href="#hardware">Hardware</a>
             </nav>
         </header>
         <main>
-            <section>
-                <h2>Hello, World!</h2>
+            <section id="decks">
+                <h2>Decks</h2>
+                <p>Out of stock.</p>
+            </section>
+            <section id="wheels">
+                <h2>Wheels</h2>
+                <p>Out of stock.</p>
+            </section>
+            <section id="hardware">
+                <h2>Hardware</h2>
+                <p>Out of stock.</p>
             </section>
         </main>
     </body>
