--- a/decks.html
+++ b/decks.html
@@ -2,16 +2,16 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Skate Shop</title>
+        <title>Skate Shop Decks</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <header>
-            <h1>Skate Shop</h1>
+            <h1>Decks</h1>
             <nav>
                 <ul>
-                    <li><a href="/" aria-current="page">Home</a></li>
-                    <li><a href="/decks">Decks</a></li>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/decks" aria-current="page">Decks</a></li>
                     <li><a href="/wheels">Wheels</a></li>
                     <li><a href="/hardware">Hardware</a></li>
                     <li><a href="/contact">Contact</a></li>
@@ -19,17 +19,16 @@
             </nav>
         </header>
         <main>
-            <h2>Top Products</h2>
-            <section id="decks">
-                <h3>Decks</h3>
+            <section id="classic">
+                <h2>Classic Decks</h2>
                 <p>Out of stock.</p>
             </section>
-            <section id="wheels">
-                <h3>Wheels</h3>
+            <section id="modern">
+                <h2>Modern Decks</h2>
                 <p>Out of stock.</p>
             </section>
-            <section id="hardware">
-                <h3>Hardware</h3>
+            <section id="premium">
+                <h3>Premium Decks</h3>
                 <p>Out of stock.</p>
             </section>
         </main>
