--- a/hardware.html
+++ b/hardware.html
@@ -2,34 +2,33 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Skate Shop</title>
+        <title>Skate Shop Hardware</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <header>
-            <h1>Skate Shop</h1>
+            <h1>Hardware</h1>
             <nav>
                 <ul>
-                    <li><a href="/" aria-current="page">Home</a></li>
+                    <li><a href="/">Home</a></li>
                     <li><a href="/decks">Decks</a></li>
                     <li><a href="/wheels">Wheels</a></li>
-                    <li><a href="/hardware">Hardware</a></li>
+                    <li><a href="/hardware" aria-current="page">Hardware</a></li>
                     <li><a href="/contact">Contact</a></li>
                 </ul>
             </nav>
         </header>
         <main>
-            <h2>Top Products</h2>
-            <section id="decks">
-                <h3>Decks</h3>
+            <section id="trucks">
+                <h2>Trucks</h2>
                 <p>Out of stock.</p>
             </section>
-            <section id="wheels">
-                <h3>Wheels</h3>
+            <section id="griptape">
+                <h2>Griptape</h2>
                 <p>Out of stock.</p>
             </section>
-            <section id="hardware">
-                <h3>Hardware</h3>
+            <section id="wax">
+                <h3>Wax</h3>
                 <p>Out of stock.</p>
             </section>
         </main>
