--- a/hardware.html
+++ b/hardware.html
@@ -10,11 +10,11 @@
             <h1>Hardware</h1>
             <nav>
                 <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/decks">Decks</a></li>
-                    <li><a href="/wheels">Wheels</a></li>
-                    <li><a href="/hardware" aria-current="page">Hardware</a></li>
-                    <li><a href="/contact">Contact</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="decks.html">Decks</a></li>
+                    <li><a href="wheels.html">Wheels</a></li>
+                    <li><a href="hardware.html" aria-current="page">Hardware</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
