--- a/decks.html
+++ b/decks.html
@@ -10,11 +10,11 @@
             <h1>Decks</h1>
             <nav>
                 <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/decks" aria-current="page">Decks</a></li>
-                    <li><a href="/wheels">Wheels</a></li>
-                    <li><a href="/hardware">Hardware</a></li>
-                    <li><a href="/contact">Contact</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="decks.html" aria-current="page">Decks</a></li>
+                    <li><a href="wheels.html">Wheels</a></li>
+                    <li><a href="hardware.html">Hardware</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
