--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
             <h1>Skate Shop</h1>
             <nav>
                 <ul>
-                    <li><a href="/" aria-current="page">Home</a></li>
-                    <li><a href="/decks">Decks</a></li>
-                    <li><a href="/wheels">Wheels</a></li>
-                    <li><a href="/hardware">Hardware</a></li>
-                    <li><a href="/contact">Contact</a></li>
+                    <li><a href="index.html" aria-current="page">Home</a></li>
+                    <li><a href="decks.html">Decks</a></li>
+                    <li><a href="wheels.html">Wheels</a></li>
+                    <li><a href="hardware.html">Hardware</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
