Added About page

--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Skate Shop Contact</title>
+        <title>Contact | Bob's Skate Shop</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
@@ -14,12 +14,13 @@
                     <li><a href="decks.html">Decks</a></li>
                     <li><a href="wheels.html">Wheels</a></li>
                     <li><a href="hardware.html">Hardware</a></li>
+                    <li><a href="about.html">About</a></li>
                     <li><a href="contact.html" aria-current="page">Contact</a></li>
                 </ul>
             </nav>
         </header>
         <main>
-            <form action="/contact" method="post">
+            <form action="contact.html" method="post">
                 <div>
                     <label for="name">Name</label>
                     <input type="text" id="name" name="name" required>
