--- a/decks.html
+++ b/decks.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Skate Shop Decks</title>
+        <title>Decks | Bob's Skate Shop</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
@@ -14,6 +14,7 @@
                     <li><a href="decks.html" aria-current="page">Decks</a></li>
                     <li><a href="wheels.html">Wheels</a></li>
                     <li><a href="hardware.html">Hardware</a></li>
+                    <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
