--- a/index.html
+++ b/index.html
@@ -2,18 +2,20 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Skate Shop</title>
+        <meta name="description" content="Shop now for top quality skateboard decks, wheels, and hardware.">
+        <title>Bob's Skate Shop</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <header>
-            <h1>Skate Shop</h1>
+            <h1>Bob's Skate Shop</h1>
             <nav>
                 <ul>
                     <li><a href="index.html" aria-current="page">Home</a></li>
                     <li><a href="decks.html">Decks</a></li>
                     <li><a href="wheels.html">Wheels</a></li>
                     <li><a href="hardware.html">Hardware</a></li>
+                    <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
