--- a/about.html
+++ b/about.html
@@ -2,8 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="description" content="Bob's Skate Shop is a small skateboard shop offering a variety of high-quality skating products.">
         <title>Contact | Bob's Skate Shop</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="icon" type="image/png" href="favicon.png">
     </head>
     <body>
         <header>
