--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="description" content="Contact us at Bob's Skate Shop.">
         <title>Contact | Bob's Skate Shop</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="icon" type="image/png" href="favicon.png">
     </head>
     <body>
         <header>
@@ -21,20 +23,20 @@
         </header>
         <main>
             <form action="contact.html" method="post">
-                <div>
+                <p>
                     <label for="name">Name</label>
                     <input type="text" id="name" name="name" required>
-                </div>
+                </p>
 
-                <div>
+                <p>
                     <label for="email">Email</label>
-                    <input type="email" id="email" name="email" required>
-                </div>
+                    <input type="email" id="email" name="email" placeholder="name@email.com" required>
+                </p>
 
-                <div>
+                <p>
                     <label for="message">Message</label>
                     <textarea id="message" name="message" rows="5" required></textarea>
-                </div>
+                </p>
 
                 <button type="submit">Submit</button>
             </form>
