--- a/hardware.html
+++ b/hardware.html
@@ -2,8 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="description" content="Shop now for top quality skateboard hardware at Bob's Skate Shop.">
         <title>Hardware | Bob's Skate Shop</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="icon" type="image/png" href="favicon.png">
     </head>
     <body>
         <header>
