--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="description" content="Shop now for top quality skateboard decks, wheels, and hardware.">
         <title>Bob's Skate Shop</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="icon" type="image/png" href="favicon.png">
     </head>
     <body>
         <header>
