--- a/hardware.html
+++ b/hardware.html
@@ -22,6 +22,7 @@
             </nav>
         </header>
         <main>
+            <img src="skateboard_trucks.png" alt="Two skateboard trucks">
             <section id="trucks">
                 <h2>Trucks</h2>
                 <p>Out of stock.</p>
@@ -31,7 +32,7 @@
                 <p>Out of stock.</p>
             </section>
             <section id="wax">
-                <h3>Wax</h3>
+                <h2>Wax</h2>
                 <p>Out of stock.</p>
             </section>
         </main>
