--- a/wheels.html
+++ b/wheels.html
@@ -22,6 +22,7 @@
             </nav>
         </header>
         <main>
+            <img src="skateboard_wheels.png" alt="Four skateboard wheels">
             <section id="classic">
                 <h2>Classic Wheels</h2>
                 <p>Out of stock.</p>
@@ -31,7 +32,7 @@
                 <p>Out of stock.</p>
             </section>
             <section id="premium">
-                <h3>Premium Wheels</h3>
+                <h2>Premium Wheels</h2>
                 <p>Out of stock.</p>
             </section>
         </main>
