--- a/decks.html
+++ b/decks.html
@@ -22,6 +22,7 @@
             </nav>
         </header>
         <main>
+            <img src="skateboard_decks.png" alt="Four skateboard decks">
             <section id="classic">
                 <h2>Classic Decks</h2>
                 <p>Out of stock.</p>
@@ -31,7 +32,7 @@
                 <p>Out of stock.</p>
             </section>
             <section id="premium">
-                <h3>Premium Decks</h3>
+                <h2>Premium Decks</h2>
                 <p>Out of stock.</p>
             </section>
         </main>
