--- a/about.html
+++ b/about.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="description" content="Bob's Skate Shop is a small skateboard shop offering a variety of high-quality skating products.">
-        <title>Contact | Bob's Skate Shop</title>
+        <title>About | Bob's Skate Shop</title>
         <link rel="stylesheet" href="styles.css">
         <link rel="icon" type="image/png" href="favicon.png">
     </head>
     <body>
         <header>
-            <h1>Contact</h1>
+            <h1>About</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
